Refactor rewrites in vercel.json for clarity

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,10 @@
 {
   "rewrites": [
-    {
-      "source": "/_spark/llm",
-      "destination": "/api/_spark/llm"
-    },
-    {
-      "source": "/_spark/user",
-      "destination": "/api/_spark/user"
-    },
-    {
-      "source": "/_spark/loaded",
-      "destination": "/api/_spark/loaded"
-    },
-    {
-      "source": "/_spark/kv",
-      "destination": "/api/_spark/kv"
-    },
-    {
-      "source": "/_spark/kv/:key",
-      "destination": "/api/_spark/kv/:key"
-    }
+    { "source": "/_spark/llm", "destination": "/api/_spark/llm" },
+    { "source": "/_spark/user", "destination": "/api/_spark/user" },
+    { "source": "/_spark/loaded", "destination": "/api/_spark/loaded" },
+    { "source": "/_spark/kv", "destination": "/api/_spark/kv" },
+    { "source": "/_spark/kv/:key", "destination": "/api/_spark/kv/:key" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
