Configure 24toolkit.com domain with full SEO optimization
- Update meta tags (OpenGraph, Twitter Cards) with full domain URLs
- Add comprehensive sitemap.xml with all pages and AI tools
- Add robots.txt with proper crawl rules
- Configure security headers in vercel.json
- Create complete README.md with deployment instructions
- Update DEPLOYMENT.md with detailed deployment guide
- Add DOMAIN_CONFIGURATION.md summary
- Update .env.example with domain configuration

All AI tools ready to work with GitHub Models API
SEO fully optimized for search engines
Security headers configured
Ready for production deployment

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@
 # Get your token from: https://github.com/settings/tokens
 # Required scopes: (none specific required, but token must be valid)
 GITHUB_TOKEN=your_github_personal_access_token_here
+
+# Domain Configuration
+VITE_DOMAIN=https://24toolkit.com
+
+# Optional: Analytics
+# VITE_GA_TRACKING_ID=your_ga_tracking_id
