--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,23 @@
   ],
   "headers": [
     {
+      "source": "/api/_spark/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
