--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "functions": {
+    "api/_spark/*.ts": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     { "source": "/_spark/llm", "destination": "/api/_spark/llm" },
     { "source": "/_spark/user", "destination": "/api/_spark/user" },
@@ -8,6 +14,23 @@
     { "source": "/(.*)", "destination": "/" }
   ],
   "headers": [
+    {
+      "source": "/_spark/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
+    },
     {
       "source": "/api/_spark/(.*)",
       "headers": [
