Fix KV endpoints routing and add PUT method support
- Fix KV routing: /api/_spark/kv/index and /api/_spark/kv/[key]
- Add PUT method support for KV operations (Spark SDK uses it)
- Add X-Spark-Initial header to CORS
- Add specific CORS headers for /kv endpoints
- Support both POST and PUT for setting values

--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,28 @@
     { "source": "/_spark/llm", "destination": "/api/_spark/llm" },
     { "source": "/_spark/user", "destination": "/api/_spark/user" },
     { "source": "/_spark/loaded", "destination": "/api/_spark/loaded" },
-    { "source": "/_spark/kv", "destination": "/api/_spark/kv" },
-    { "source": "/_spark/kv/:key", "destination": "/api/_spark/kv/:key" },
+    { "source": "/_spark/kv", "destination": "/api/_spark/kv/index" },
+    { "source": "/_spark/kv/:key", "destination": "/api/_spark/kv/[key]" },
     { "source": "/(.*)", "destination": "/" }
   ],
   "headers": [
+    {
+      "source": "/_spark/kv(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization, X-Spark-Initial"
+        }
+      ]
+    },
     {
       "source": "/_spark/(.*)",
       "headers": [
