Add unified Spark API proxy to fix routing issues
- Create /api/_spark.ts as catch-all proxy
- Routes all /_spark/* requests through single endpoint
- Dynamically imports and calls appropriate handlers
- Simplifies vercel.json rewrites configuration
- Should fix all 405 errors

--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,7 @@
     }
   },
   "rewrites": [
-    { "source": "/_spark/llm", "destination": "/api/_spark/llm" },
-    { "source": "/_spark/user", "destination": "/api/_spark/user" },
-    { "source": "/_spark/loaded", "destination": "/api/_spark/loaded" },
-    { "source": "/_spark/kv", "destination": "/api/_spark/kv/index" },
-    { "source": "/_spark/kv/:key*", "destination": "/api/_spark/kv/[key]?key=:key*" },
+    { "source": "/_spark/:path*", "destination": "/api/_spark" },
     { "source": "/(.*)", "destination": "/" }
   ],
   "headers": [
