Add Anthropic Claude API support as primary AI provider
- Support ANTHROPIC_API_KEY as primary provider
- Fallback to GitHub Models if Anthropic key not available
- Map model names (gpt-4o -> Claude 3.5 Sonnet, gpt-4o-mini -> Claude 3.5 Haiku)
- Convert between OpenAI and Claude API formats automatically
- Update ENV_SETUP.md with Anthropic configuration
- Update .env.example with both options

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# GitHub Token for AI Features
+# AI API Keys (choose one or both)
+# Anthropic Claude API Key (Recommended - High quality)
+ANTHROPIC_API_KEY=sk-ant-your_key_here
+
+# GitHub Token for GitHub Models (Alternative)
 # Get your token from: https://github.com/settings/tokens
 # Required scopes: (none specific required, but token must be valid)
 GITHUB_TOKEN=your_github_personal_access_token_here
